crates/sui-config/tests/snapshots/snapshot_tests__network_config_snapshot_matches.snap
---
source: crates/sui-config/tests/snapshot_tests.rs
expression: network_config
---
validator_configs:
  - protocol-key-pair:
      value: VTDx4HjVmRBqdqBWg2zN+zcFE20io3CrBchGy/iV1lo=
    worker-key-pair:
      value: AH7M/Ot6iUd/Jj47r5aGmQROL24mxT4K8EF1Gvjhk0zT
    account-key-pair:
      value: AH45w+v4xGlEc6QI3WT6iaD1K9yo+kl3XxPyZGlRclZp
    network-key-pair:
      value: AGXlMKrYkj+CLojtVPwa9rE1QUKZHJA+XGhfgWp7porR
    db-path: /tmp/foo/
    network-address: ""
    json-rpc-address: "0.0.0.0:1"
    metrics-address: "0.0.0.0:1"
    admin-interface-port: 8888
    consensus-config:
      address: ""
      db-path: /tmp/foo/
      internal-worker-address: ""
      max-pending-transactions: ~
      narwhal-config:
        header_num_of_batches_threshold: 32
        max_header_num_of_batches: 1000
        max_header_delay: 2000ms
        min_header_delay: 500ms
        gc_depth: 50
        sync_retry_delay: 5000ms
        sync_retry_nodes: 3
        batch_size: 500000
        max_batch_delay: 100ms
        block_synchronizer:
          range_synchronize_timeout: 30000ms
          certificates_synchronize_timeout: 30000ms
          payload_synchronize_timeout: 30000ms
          payload_availability_timeout: 30000ms
          handler_certificate_deliver_timeout: 30000ms
        consensus_api_grpc:
          socket_addr: ""
          get_collections_timeout: 5000ms
          remove_collections_timeout: 5000ms
        max_concurrent_requests: 500000
        prometheus_metrics:
          socket_addr: /ip4/127.0.0.1/tcp/1234
        network_admin_server:
          primary_network_admin_server_port: 5678
          worker_network_admin_server_base_port: 8765
        anemo:
          send_certificate_rate_limit: ~
          get_payload_availability_rate_limit: ~
          get_certificates_rate_limit: ~
          report_batch_rate_limit: ~
          request_batch_rate_limit: ~
    enable-event-processing: false
    grpc-load-shed: ~
    grpc-concurrency-limit: 20000000000
    p2p-config:
      listen-address: "0.0.0.0:1"
    genesis:
      genesis: "[fake genesis]"
    authority-store-pruning-config:
      num-latest-epoch-dbs-to-retain: 3
      epoch-db-pruning-period-secs: 3600
      num-epochs-to-retain: 2
      max-checkpoints-in-batch: 200
      max-transactions-in-batch: 1000
      use-range-deletion: true
    end-of-epoch-broadcast-channel-capacity: 128
    checkpoint-executor-config:
      checkpoint-execution-max-concurrency: 200
      local-execution-timeout-sec: 10
    db-checkpoint-config:
      perform-db-checkpoints-at-epoch-end: false
    indirect-objects-threshold: 18446744073709551615
    expensive-safety-check-config:
      enable-epoch-sui-conservation-check: false
      force-disable-epoch-sui-conservation-check: false
  - protocol-key-pair:
      value: avYcyVgYMXTyaUYh9IRwLK0gSzl7YF6ZQDAbrS1Bhvo=
    worker-key-pair:
      value: ABZRTK3YmdGRxzGX33BUjWwIxKGcl9/6vrJAKvjNY3gN
    account-key-pair:
      value: AClK2/gtiS+cypPl2il6YC49PJgkHoAgnpKZ0dEiwIUw
    network-key-pair:
      value: AKTwSrpgq5BEhJgIhv+1H0jMiJQMigkGsrAW9EQPaMSI
    db-path: /tmp/foo/
    network-address: ""
    json-rpc-address: "0.0.0.0:1"
    metrics-address: "0.0.0.0:1"
    admin-interface-port: 8888
    consensus-config:
      address: ""
      db-path: /tmp/foo/
      internal-worker-address: ""
      max-pending-transactions: ~
      narwhal-config:
        header_num_of_batches_threshold: 32
        max_header_num_of_batches: 1000
        max_header_delay: 2000ms
        min_header_delay: 500ms
        gc_depth: 50
        sync_retry_delay: 5000ms
        sync_retry_nodes: 3
        batch_size: 500000
        max_batch_delay: 100ms
        block_synchronizer:
          range_synchronize_timeout: 30000ms
          certificates_synchronize_timeout: 30000ms
          payload_synchronize_timeout: 30000ms
          payload_availability_timeout: 30000ms
          handler_certificate_deliver_timeout: 30000ms
        consensus_api_grpc:
          socket_addr: ""
          get_collections_timeout: 5000ms
          remove_collections_timeout: 5000ms
        max_concurrent_requests: 500000
        prometheus_metrics:
          socket_addr: /ip4/127.0.0.1/tcp/1234
        network_admin_server:
          primary_network_admin_server_port: 5678
          worker_network_admin_server_base_port: 8765
        anemo:
          send_certificate_rate_limit: ~
          get_payload_availability_rate_limit: ~
          get_certificates_rate_limit: ~
          report_batch_rate_limit: ~
          request_batch_rate_limit: ~
    enable-event-processing: false
    grpc-load-shed: ~
    grpc-concurrency-limit: 20000000000
    p2p-config:
      listen-address: "0.0.0.0:1"
    genesis:
      genesis: "[fake genesis]"
    authority-store-pruning-config:
      num-latest-epoch-dbs-to-retain: 3
      epoch-db-pruning-period-secs: 3600
      num-epochs-to-retain: 2
      max-checkpoints-in-batch: 200
      max-transactions-in-batch: 1000
      use-range-deletion: true
    end-of-epoch-broadcast-channel-capacity: 128
    checkpoint-executor-config:
      checkpoint-execution-max-concurrency: 200
      local-execution-timeout-sec: 10
    db-checkpoint-config:
      perform-db-checkpoints-at-epoch-end: false
    indirect-objects-threshold: 18446744073709551615
    expensive-safety-check-config:
      enable-epoch-sui-conservation-check: false
      force-disable-epoch-sui-conservation-check: false
  - protocol-key-pair:
      value: OXnx3yM1C/ppgnDMx/o1d49fJs7E05kq11mXNae/O+I=
    worker-key-pair:
      value: ANuTFymJGw6l1rSGV5du4G4ROOLd4adUItxxVhy31lnN
    account-key-pair:
      value: AHs3lfh8LlhanWE/zTjOqDFkNiDL2ouxjjJ+WDT5/hVg
    network-key-pair:
      value: AJKPlasm4k2SQnJsg8qDJZ3xZFL7Q2TaHy5394eVjf6M
    db-path: /tmp/foo/
    network-address: ""
    json-rpc-address: "0.0.0.0:1"
    metrics-address: "0.0.0.0:1"
    admin-interface-port: 8888
    consensus-config:
      address: ""
      db-path: /tmp/foo/
      internal-worker-address: ""
      max-pending-transactions: ~
      narwhal-config:
        header_num_of_batches_threshold: 32
        max_header_num_of_batches: 1000
        max_header_delay: 2000ms
        min_header_delay: 500ms
        gc_depth: 50
        sync_retry_delay: 5000ms
        sync_retry_nodes: 3
        batch_size: 500000
        max_batch_delay: 100ms
        block_synchronizer:
          range_synchronize_timeout: 30000ms
          certificates_synchronize_timeout: 30000ms
          payload_synchronize_timeout: 30000ms
          payload_availability_timeout: 30000ms
          handler_certificate_deliver_timeout: 30000ms
        consensus_api_grpc:
          socket_addr: ""
          get_collections_timeout: 5000ms
          remove_collections_timeout: 5000ms
        max_concurrent_requests: 500000
        prometheus_metrics:
          socket_addr: /ip4/127.0.0.1/tcp/1234
        network_admin_server:
          primary_network_admin_server_port: 5678
          worker_network_admin_server_base_port: 8765
        anemo:
          send_certificate_rate_limit: ~
          get_payload_availability_rate_limit: ~
          get_certificates_rate_limit: ~
          report_batch_rate_limit: ~
          request_batch_rate_limit: ~
    enable-event-processing: false
    grpc-load-shed: ~
    grpc-concurrency-limit: 20000000000
    p2p-config:
      listen-address: "0.0.0.0:1"
    genesis:
      genesis: "[fake genesis]"
    authority-store-pruning-config:
      num-latest-epoch-dbs-to-retain: 3
      epoch-db-pruning-period-secs: 3600
      num-epochs-to-retain: 2
      max-checkpoints-in-batch: 200
      max-transactions-in-batch: 1000
      use-range-deletion: true
    end-of-epoch-broadcast-channel-capacity: 128
    checkpoint-executor-config:
      checkpoint-execution-max-concurrency: 200
      local-execution-timeout-sec: 10
    db-checkpoint-config:
      perform-db-checkpoints-at-epoch-end: false
    indirect-objects-threshold: 18446744073709551615
    expensive-safety-check-config:
      enable-epoch-sui-conservation-check: false
      force-disable-epoch-sui-conservation-check: false
  - protocol-key-pair:
      value: CyNkjqNVr3HrHTH7f/NLs7u5lUHJzuPAw0PqMTD2y2s=
    worker-key-pair:
      value: AGGCaIy1OwvvLtr2rcHewlJJBILLzhrEao4QmF0D2UTz
    account-key-pair:
      value: ANQ4duxTsOdofUAHfSIo8kauNj7SRmLZgmdkb12DwxF6
    network-key-pair:
      value: AKFIgWPoTZb9/zUu/1P8wFtxDDYuObk1xr/QaxZ2H48i
    db-path: /tmp/foo/
    network-address: ""
    json-rpc-address: "0.0.0.0:1"
    metrics-address: "0.0.0.0:1"
    admin-interface-port: 8888
    consensus-config:
      address: ""
      db-path: /tmp/foo/
      internal-worker-address: ""
      max-pending-transactions: ~
      narwhal-config:
        header_num_of_batches_threshold: 32
        max_header_num_of_batches: 1000
        max_header_delay: 2000ms
        min_header_delay: 500ms
        gc_depth: 50
        sync_retry_delay: 5000ms
        sync_retry_nodes: 3
        batch_size: 500000
        max_batch_delay: 100ms
        block_synchronizer:
          range_synchronize_timeout: 30000ms
          certificates_synchronize_timeout: 30000ms
          payload_synchronize_timeout: 30000ms
          payload_availability_timeout: 30000ms
          handler_certificate_deliver_timeout: 30000ms
        consensus_api_grpc:
          socket_addr: ""
          get_collections_timeout: 5000ms
          remove_collections_timeout: 5000ms
        max_concurrent_requests: 500000
        prometheus_metrics:
          socket_addr: /ip4/127.0.0.1/tcp/1234
        network_admin_server:
          primary_network_admin_server_port: 5678
          worker_network_admin_server_base_port: 8765
        anemo:
          send_certificate_rate_limit: ~
          get_payload_availability_rate_limit: ~
          get_certificates_rate_limit: ~
          report_batch_rate_limit: ~
          request_batch_rate_limit: ~
    enable-event-processing: false
    grpc-load-shed: ~
    grpc-concurrency-limit: 20000000000
    p2p-config:
      listen-address: "0.0.0.0:1"
    genesis:
      genesis: "[fake genesis]"
    authority-store-pruning-config:
      num-latest-epoch-dbs-to-retain: 3
      epoch-db-pruning-period-secs: 3600
      num-epochs-to-retain: 2
      max-checkpoints-in-batch: 200
      max-transactions-in-batch: 1000
      use-range-deletion: true
    end-of-epoch-broadcast-channel-capacity: 128
    checkpoint-executor-config:
      checkpoint-execution-max-concurrency: 200
      local-execution-timeout-sec: 10
    db-checkpoint-config:
      perform-db-checkpoints-at-epoch-end: false
    indirect-objects-threshold: 18446744073709551615
    expensive-safety-check-config:
      enable-epoch-sui-conservation-check: false
      force-disable-epoch-sui-conservation-check: false
  - protocol-key-pair:
      value: X/I/kM+KvHcxAKEf2UU6Sr7SpN3bhiE9nP5CuM/iIY0=
    worker-key-pair:
      value: ABB1+x4nRFoyYG3rKucsVmnAZB1Mf8ACwfdDJvEomhGW
    account-key-pair:
      value: AAQtIbw/tafBD2X+p6ef4RsZM1kKG4vvWMebYPcunc+5
    network-key-pair:
      value: AJFy2uQrEISFM5YRQRBUz9XisSepQRkWMzZDo6w2ppVP
    db-path: /tmp/foo/
    network-address: ""
    json-rpc-address: "0.0.0.0:1"
    metrics-address: "0.0.0.0:1"
    admin-interface-port: 8888
    consensus-config:
      address: ""
      db-path: /tmp/foo/
      internal-worker-address: ""
      max-pending-transactions: ~
      narwhal-config:
        header_num_of_batches_threshold: 32
        max_header_num_of_batches: 1000
        max_header_delay: 2000ms
        min_header_delay: 500ms
        gc_depth: 50
        sync_retry_delay: 5000ms
        sync_retry_nodes: 3
        batch_size: 500000
        max_batch_delay: 100ms
        block_synchronizer:
          range_synchronize_timeout: 30000ms
          certificates_synchronize_timeout: 30000ms
          payload_synchronize_timeout: 30000ms
          payload_availability_timeout: 30000ms
          handler_certificate_deliver_timeout: 30000ms
        consensus_api_grpc:
          socket_addr: ""
          get_collections_timeout: 5000ms
          remove_collections_timeout: 5000ms
        max_concurrent_requests: 500000
        prometheus_metrics:
          socket_addr: /ip4/127.0.0.1/tcp/1234
        network_admin_server:
          primary_network_admin_server_port: 5678
          worker_network_admin_server_base_port: 8765
        anemo:
          send_certificate_rate_limit: ~
          get_payload_availability_rate_limit: ~
          get_certificates_rate_limit: ~
          report_batch_rate_limit: ~
          request_batch_rate_limit: ~
    enable-event-processing: false
    grpc-load-shed: ~
    grpc-concurrency-limit: 20000000000
    p2p-config:
      listen-address: "0.0.0.0:1"
    genesis:
      genesis: "[fake genesis]"
    authority-store-pruning-config:
      num-latest-epoch-dbs-to-retain: 3
      epoch-db-pruning-period-secs: 3600
      num-epochs-to-retain: 2
      max-checkpoints-in-batch: 200
      max-transactions-in-batch: 1000
      use-range-deletion: true
    end-of-epoch-broadcast-channel-capacity: 128
    checkpoint-executor-config:
      checkpoint-execution-max-concurrency: 200
      local-execution-timeout-sec: 10
    db-checkpoint-config:
      perform-db-checkpoints-at-epoch-end: false
    indirect-objects-threshold: 18446744073709551615
    expensive-safety-check-config:
      enable-epoch-sui-conservation-check: false
      force-disable-epoch-sui-conservation-check: false
  - protocol-key-pair:
      value: N272EiFDyKtxRbDKbyN6ujenJ+skPcRoc/XolpOLGnU=
    worker-key-pair:
      value: AHNbJ+TbMK2C5vo2buMguifUhvMpyG2dyqGXF69UJSTC
    account-key-pair:
      value: AI0OYrH3grOXDvJEH0aDYhOhMdudJ4hLVwh+1OGNyoXe
    network-key-pair:
      value: AFJKmNZNkqyS85XUqAKsw2adb7nVejMwGaqI2ptF2NmT
    db-path: /tmp/foo/
    network-address: ""
    json-rpc-address: "0.0.0.0:1"
    metrics-address: "0.0.0.0:1"
    admin-interface-port: 8888
    consensus-config:
      address: ""
      db-path: /tmp/foo/
      internal-worker-address: ""
      max-pending-transactions: ~
      narwhal-config:
        header_num_of_batches_threshold: 32
        max_header_num_of_batches: 1000
        max_header_delay: 2000ms
        min_header_delay: 500ms
        gc_depth: 50
        sync_retry_delay: 5000ms
        sync_retry_nodes: 3
        batch_size: 500000
        max_batch_delay: 100ms
        block_synchronizer:
          range_synchronize_timeout: 30000ms
          certificates_synchronize_timeout: 30000ms
          payload_synchronize_timeout: 30000ms
          payload_availability_timeout: 30000ms
          handler_certificate_deliver_timeout: 30000ms
        consensus_api_grpc:
          socket_addr: ""
          get_collections_timeout: 5000ms
          remove_collections_timeout: 5000ms
        max_concurrent_requests: 500000
        prometheus_metrics:
          socket_addr: /ip4/127.0.0.1/tcp/1234
        network_admin_server:
          primary_network_admin_server_port: 5678
          worker_network_admin_server_base_port: 8765
        anemo:
          send_certificate_rate_limit: ~
          get_payload_availability_rate_limit: ~
          get_certificates_rate_limit: ~
          report_batch_rate_limit: ~
          request_batch_rate_limit: ~
    enable-event-processing: false
    grpc-load-shed: ~
    grpc-concurrency-limit: 20000000000
    p2p-config:
      listen-address: "0.0.0.0:1"
    genesis:
      genesis: "[fake genesis]"
    authority-store-pruning-config:
      num-latest-epoch-dbs-to-retain: 3
      epoch-db-pruning-period-secs: 3600
      num-epochs-to-retain: 2
      max-checkpoints-in-batch: 200
      max-transactions-in-batch: 1000
      use-range-deletion: true
    end-of-epoch-broadcast-channel-capacity: 128
    checkpoint-executor-config:
      checkpoint-execution-max-concurrency: 200
      local-execution-timeout-sec: 10
    db-checkpoint-config:
      perform-db-checkpoints-at-epoch-end: false
    indirect-objects-threshold: 18446744073709551615
    expensive-safety-check-config:
      enable-epoch-sui-conservation-check: false
      force-disable-epoch-sui-conservation-check: false
  - protocol-key-pair:
      value: a74f03IOjL8ZFSWFChFVEi+wiMwHNwNCPDGIYkGfgjs=
    worker-key-pair:
      value: AFKq0My7gQHTDG58VQMYImhU18+j2le9HtF08nhehbvK
    account-key-pair:
      value: ACdIQ0IILpTytmU6RjVq3Ifr4O9zkPZVn0V7vbjfkKPP
    network-key-pair:
      value: AG9uDSdI54AnHant8fiWuNdavPdx76lZfVjbuiHRO8aE
    db-path: /tmp/foo/
    network-address: ""
    json-rpc-address: "0.0.0.0:1"
    metrics-address: "0.0.0.0:1"
    admin-interface-port: 8888
    consensus-config:
      address: ""
      db-path: /tmp/foo/
      internal-worker-address: ""
      max-pending-transactions: ~
      narwhal-config:
        header_num_of_batches_threshold: 32
        max_header_num_of_batches: 1000
        max_header_delay: 2000ms
        min_header_delay: 500ms
        gc_depth: 50
        sync_retry_delay: 5000ms
        sync_retry_nodes: 3
        batch_size: 500000
        max_batch_delay: 100ms
        block_synchronizer:
          range_synchronize_timeout: 30000ms
          certificates_synchronize_timeout: 30000ms
          payload_synchronize_timeout: 30000ms
          payload_availability_timeout: 30000ms
          handler_certificate_deliver_timeout: 30000ms
        consensus_api_grpc:
          socket_addr: ""
          get_collections_timeout: 5000ms
          remove_collections_timeout: 5000ms
        max_concurrent_requests: 500000
        prometheus_metrics:
          socket_addr: /ip4/127.0.0.1/tcp/1234
        network_admin_server:
          primary_network_admin_server_port: 5678
          worker_network_admin_server_base_port: 8765
        anemo:
          send_certificate_rate_limit: ~
          get_payload_availability_rate_limit: ~
          get_certificates_rate_limit: ~
          report_batch_rate_limit: ~
          request_batch_rate_limit: ~
    enable-event-processing: false
    grpc-load-shed: ~
    grpc-concurrency-limit: 20000000000
    p2p-config:
      listen-address: "0.0.0.0:1"
    genesis:
      genesis: "[fake genesis]"
    authority-store-pruning-config:
      num-latest-epoch-dbs-to-retain: 3
      epoch-db-pruning-period-secs: 3600
      num-epochs-to-retain: 2
      max-checkpoints-in-batch: 200
      max-transactions-in-batch: 1000
      use-range-deletion: true
    end-of-epoch-broadcast-channel-capacity: 128
    checkpoint-executor-config:
      checkpoint-execution-max-concurrency: 200
      local-execution-timeout-sec: 10
    db-checkpoint-config:
      perform-db-checkpoints-at-epoch-end: false
    indirect-objects-threshold: 18446744073709551615
    expensive-safety-check-config:
      enable-epoch-sui-conservation-check: false
      force-disable-epoch-sui-conservation-check: false
account_keys:
  - Hloy4pnf8pWEHGP+4OFsXz56bLdIJhkD2O+OdKMqCA4=
  - pvMScjoMR/DaN0M5IOxS2VpGC59N6kv6gDm63ufLQ5w=
  - tPu3gzoWoFbHbnuaUp1whWKFV7mtDVfOtTHDWWR2ZoU=
  - mfPjCoE6SX0Sl84MnmNS/LS+tfPpkn7I8tziuk2g0WM=
  - 5RWlYF22jS9i76zLl8jP2D3D8GC5ht+IP1dWUBGZxi8=
genesis: "[fake genesis]"

