crates/sui-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-2.snap
---
source: crates/sui-config/tests/snapshot_tests.rs
expression: genesis.sui_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 1
system_state_version: 1
validators:
  total_stake: 20000000000000000
  active_validators:
    - metadata:
        sui_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        worker_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 151
          - 191
          - 31
          - 245
          - 62
          - 131
          - 184
          - 23
          - 162
          - 33
          - 124
          - 71
          - 229
          - 10
          - 56
          - 179
          - 47
          - 67
          - 223
          - 65
          - 196
          - 125
          - 67
          - 111
          - 55
          - 104
          - 114
          - 157
          - 166
          - 146
          - 6
          - 104
          - 90
          - 214
          - 33
          - 36
          - 63
          - 93
          - 228
          - 221
          - 166
          - 7
          - 164
          - 61
          - 169
          - 219
          - 78
          - 19
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        worker_address: /ip4/127.0.0.1/udp/80
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
        extra_fields:
          id:
            id: "0x0005d31d1abd249720212495a76266c4cb93909957bcf1787c0f20c146f8db49"
          size: 0
      voting_power: 10000
      operation_cap_id: "0x94b29372accf3514b54b4ea08e5007a64a45dcca42c99fad78c6415747313b4e"
      gas_price: 1
      staking_pool:
        id: "0xa937536fd858829034814056ec219e5ea01b0d75f0fae229ec593be87ec6daae"
        activation_epoch: 0
        deactivation_epoch: ~
        sui_balance: 20000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 20000000000000000
        exchange_rates:
          id: "0x6d46126f5746d76904e6251cba20f436f61d40507e8089b0af0fc1c47956440b"
          size: 1
        pending_stake: 0
        pending_total_sui_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0x795da556f4f5c32fa82945a5be8e96f3919cbe80b4a95d76fc4c90c27205dda2"
          size: 0
      commission_rate: 0
      next_epoch_stake: 20000000000000000
      next_epoch_gas_price: 1
      next_epoch_commission_rate: 0
      extra_fields:
        id:
          id: "0xa12148ca967f056fdb7c4552acd87a6b1c2417305899e3f260bbc75e26072e7c"
        size: 0
  pending_active_validators:
    contents:
      id: "0xb314faef4e2c2181ef5e09a2a1631ac2e47a045762e9ca028125ba8c344b43cd"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0xe136e2b66ab0d1e28782290de04ab723b0ee468efea3792fcbbf81b8e72ae9c2"
    size: 1
  inactive_validators:
    id: "0x2cba0753d6dffaf4318914fd13f451d00f596e902ad6ac8ccb17f002a3abb5e2"
    size: 0
  validator_candidates:
    id: "0xe10dfc7c55b725ebf67f5b6dacaeceaed97fc8443c731726a99fab8f381d09dd"
    size: 0
  at_risk_validators:
    contents: []
  extra_fields:
    id:
      id: "0x0656850237ea26e83b92eb98b7df3e486c4d93d1b3787e061143ae4c35c62f8e"
    size: 0
storage_fund:
  value: 0
parameters:
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  max_validator_count: 150
  min_validator_joining_stake: 30000000000000000
  validator_low_stake_threshold: 20000000000000000
  validator_very_low_stake_threshold: 15000000000000000
  validator_low_stake_grace_period: 7
  extra_fields:
    id:
      id: "0x823411698f3b2aeac535c707dae53805c50810a0d234e765799b8ad83f844c32"
    size: 0
reference_gas_price: 1
validator_report_records:
  contents: []
stake_subsidy:
  balance:
    value: 9980000000000000000
  distribution_counter: 0
  current_distribution_amount: 1000000000000000
  stake_subsidy_period_length: 30
  stake_subsidy_decrease_rate: 10000
  extra_fields:
    id:
      id: "0x52ab13eca6033e5a9ba41bf728efb5db7bb893641c57277f3e514e3e63bd7fa4"
    size: 0
safe_mode: false
safe_mode_storage_rewards:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0xbc851a6f655c1fb4d293e6a805b16e45fba5acca715f03122d16944d75305768"
  size: 0

