crates/sui-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-3.snap
---
source: crates/sui-config/tests/snapshot_tests.rs
expression: genesis.sui_system_object()
---
epoch: 0
protocol_version: 1
system_state_version: 1
validators:
  total_stake: 25000000000000000
  active_validators:
    - metadata:
        sui_address: "0x21b60aa9a8cb189ccbe20461dbfad2202fdef55b9418f30ac2c5fe632f6e1cb7"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 13
          - 125
          - 171
          - 53
          - 140
          - 141
          - 173
          - 170
          - 78
          - 250
          - 0
          - 73
          - 167
          - 91
          - 7
          - 67
          - 101
          - 85
          - 177
          - 10
          - 54
          - 130
          - 25
          - 187
          - 104
          - 15
          - 112
          - 87
          - 19
          - 73
          - 215
          - 117
        worker_pubkey_bytes:
          - 13
          - 125
          - 171
          - 53
          - 140
          - 141
          - 173
          - 170
          - 78
          - 250
          - 0
          - 73
          - 167
          - 91
          - 7
          - 67
          - 101
          - 85
          - 177
          - 10
          - 54
          - 130
          - 25
          - 187
          - 104
          - 15
          - 112
          - 87
          - 19
          - 73
          - 215
          - 117
        proof_of_possession_bytes:
          - 170
          - 154
          - 96
          - 173
          - 243
          - 253
          - 19
          - 242
          - 199
          - 210
          - 222
          - 31
          - 105
          - 119
          - 107
          - 78
          - 237
          - 65
          - 123
          - 138
          - 27
          - 12
          - 53
          - 7
          - 106
          - 134
          - 241
          - 161
          - 120
          - 171
          - 26
          - 169
          - 6
          - 67
          - 207
          - 133
          - 46
          - 57
          - 251
          - 29
          - 34
          - 228
          - 24
          - 5
          - 151
          - 2
          - 71
          - 102
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: []
        p2p_address: []
        primary_address: []
        worker_address: []
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
      voting_power: 10000
      operation_cap_id: "0x18b8140c8a6ea340142f128061016fc4bd8220ec88875a8e573a5f72a85a15c1"
      gas_price: 1
      staking_pool:
        id: "0xd5d9aa879b78dc1f516d71ab979189086eff752f65e4b0dea15829e3157962e1"
        activation_epoch: 0
        deactivation_epoch: ~
        sui_balance: 25000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 25000000000000000
        exchange_rates:
          id: "0xe63945cec193ca7ac76960370028110a907ad1c22ff90b1fd57ea3c441c766b4"
          size: 1
        pending_stake: 0
        pending_total_sui_withdraw: 0
        pending_pool_token_withdraw: 0
      commission_rate: 0
      next_epoch_stake: 25000000000000000
      next_epoch_gas_price: 1
      next_epoch_commission_rate: 0
  pending_active_validators:
    contents:
      id: "0x1ace65f54d65a96251b3f46bfa720ab65a7ebe0174caa9fa1dc0d65a56ae7872"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0x628ffd0e51e9a6ea32c13c2739a31a8f344b557d3429e057b377a9c499b9bb13"
    size: 1
  inactive_pools:
    id: "0x9dc97c4be6f1d0e61fbdf2cc9d78f9df04cdff7a473e2ec3a65853766dca1177"
    size: 0
  validator_candidates:
    id: "0x6d3ffc5213ed4df6802cd4535d3c18f66d85bab5e9f004a7087a005e2f8dc455"
    size: 0
  at_risk_validators:
    contents: []
storage_fund:
  value: 0
parameters:
  governance_start_epoch: 0
  epoch_duration_ms: 86400000
reference_gas_price: 1
validator_report_records:
  contents: []
stake_subsidy:
  epoch_counter: 0
  balance:
    value: 100000000000000000
  current_epoch_amount: 1000000000000000
safe_mode: false
epoch_start_timestamp_ms: 10

